--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "Benoit Paquier",
   "license": "ISC",
   "devDependencies": {
+    "@tailwindcss/cli": "^4.1.7",
     "prettier": "^3.5.3",
-    "prettier-plugin-go-template": "^0.0.15"
+    "prettier-plugin-go-template": "^0.0.15",
+    "tailwindcss": "^4.1.7"
   }
 }
