--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -112,5 +112,5 @@ jobs:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./public
+          local-dir: ./public/
           server-dir: ${{secrets.FTP_SERVER_DIR}}
