--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -1,8 +1,6 @@
-# Sample workflow for building and deploying a Hugo site to GitHub Pages
 name: Deploy to FTP
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches:
       - main
@@ -14,6 +12,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
+
+      - name: Install Node.js dependencies
+        run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
