--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -1,6 +1,7 @@
 name: Deploy to FTP
 
 on:
+  # Runs on pushes targeting the default branch
   push:
     branches:
       - main
@@ -27,8 +28,8 @@ jobs:
       - name: FTP site
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
-          ftp-server: ${{ secrets.FTP_HOST }}
-          ftp-username: ${{ secrets.FTP_USERNAME }}
-          ftp-password: ${{ secrets.FTP_PASSWORD }}
+          server: ${{ secrets.FTP_HOST }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: ./public/
           server-dir: ${{secrets.FTP_SERVER_DIR}}
-          local-dir: public/
