--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://lesbourgeons.org/lesbourgeons'
+baseURL = 'https://lesbourgeons.org'
 languageCode = 'fr-fr'
 title = 'Les bourgeons'
 [taxonomies]
